--- a/templates/base.html
+++ b/templates/base.html
@@ -132,6 +132,13 @@
                               </a>
                             </li>
                         {% endfor %}
+                        {% for collection in collections %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ collection.get_absolute_url }}">
+                                    {{ collection }}
+                                </a>
+                            </li>
+                        {% endfor %}
                       </ul>
                     </nav>
                   </div>
