--- a/saleor/static/scss/layouts/_product-page.scss
+++ b/saleor/static/scss/layouts/_product-page.scss
@@ -80,4 +80,11 @@
       }
     }
   }
+  &__collections {
+    padding-top: $global-padding * 4;
+    h2 {
+      text-align: center;
+      text-transform: uppercase;
+    }
+  }
 }
