--- a/templates/product/details.html
+++ b/templates/product/details.html
@@ -153,5 +153,5 @@
       </table>
     </div>
   </div>
-  <div id="collections" class="product__collection" data-url="{% url 'product:from_collections' product.id %}"></div>
+  <div id="collections" class="product__collection" data-url="{% url 'product:from-collections' product.id %}"></div>
 {% endblock content %}
